<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/image_photo_preview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_description_photo_preview"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_previous_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_previous_photo"
            android:padding="8dp"
            android:src="@android:drawable/ic_media_previous" />

        <ImageButton
            android:id="@+id/button_delete_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_delete_photo"
            android:padding="8dp"
            android:src="@android:drawable/ic_menu_delete" />

        <ImageButton
            android:id="@+id/button_next_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_next_photo"
            android:padding="8dp"
            android:src="@android:drawable/ic_media_next" />
    </LinearLayout>
</LinearLayout>
