<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_room_content_popup"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/text_add_category_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/dialog_add_category_title"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/input_new_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_input_field_white"
        android:hint="@string/dialog_add_category_name_hint"
        android:inputType="textCapSentences"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/icon_brown" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_outline"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/action_cancel"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="@drawable/bg_button_outline"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/action_confirm"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
